# futebol

./: .env.example  .gitignore  AGENT.md  README.md  _run_update.py  _test_hang.py  enrich_m3u.py  project.md  pyproject.toml
.futebol/: channels.json  sources.json
channels/: 30AGolfKingdom.us@SD.json  ACCDigitalNetwork.us@SD.json  ADOTV.bj@SD.json  AdessoTV.br@SD.json  Africa24Sport.fr@SD.json  AlIraqiaSport.iq@SD.json  AlkassFour.qa@SD.json  AlkassSHOOF.qa@SD.json  AlkassSHOOF2.qa@SD.json  AlkassThree.qa@SD.json  AngelTV.in@Portuguese.json  ArryadiaHD1.ma@HD.json  ArryadiaHD2.ma@HD.json  ArryadiaHD3.ma@HD.json  BahrainSports2.bh@SD.json  Belarus5.by@Internet.json  Belarus5.by@SD.json  BoasNovas.br@SD.json  CCTV5.cn@SD.json  CCTVStormFootball.cn@HD.json  CanalEducacao.br@SD.json  CanalGov.br@SD.json  CazeTV.br@SD.json  ChromaTV.br@SD.json  ClassiqueTV.br@SD.json  ConecTVBrasil.br@SD.json  DSportsUruguay.uy@SD.json  DeportesTVC.hn@SD.json  DongNaiTV2.vn@SD.json  ElHeddafTV.dz@SD.json  Equidia.fr@SD.json  FUELTV.pt@EMEA.json  FastFunBox.ru@SD.json  Football.ru@SD.json  FoxSports1.us@HD.json  GamePlus.ca@SD.json  GolClassics.es@SD.json  GospelCartoon.br@SD.json  GospelMovieTV.br@SD.json  IRIB3.ir@SD.json  (+96 more)
frontend/: angular.json  package-lock.json  package.json
frontend/scripts/: sync-m3u.mjs
frontend/src/: index.html  styles.scss
futebol/app/: application.py  cli.py
futebol/config/: settings.py
futebol/factories/: playlist_loader_factory.py  source_provider_factory.py  validator_factory.py
futebol/filters/: base_filter.py  brazilian_portuguese_filter.py  (+3 more)
(+228 files in other folders)
